# complements-alimentaires

./: .env.local  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  compose.yaml  manage.py  pyproject.toml  requirements.txt  requirements_notebooks.txt  schema_declarations.json
.devcontainer/: devcontainer.json  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml  main.yml
api/: doc.md  exception_handling.py  exceptions.py  permissions.py  urls.py
api/serializers/: __init__.py  autocomplete_item.py  blogpost.py  common_ingredient.py  company.py  condition.py  declaration.py  effect.py  error_report.py  galenic_formulation.py  global_roles.py  historical_record.py  ingredient.py  microorganism.py  plant.py  population.py  preparation.py  roles.py  search_result.py  snapshot.py  solicitation.py  substance.py  unit.py  user.py  utils.py  webinaire.py  webinar.py
api/tests/: test_autocomplete.py  test_blog.py  test_company.py  test_company_claims.py  test_company_control_excel.py  test_company_controllers.py  test_company_roles.py  test_condition.py  test_contact.py  test_declaration.py  test_declaration_control_excel.py  test_declaration_controllers.py  test_declaration_date_filter.py  test_declaration_dose_filter.py  test_declaration_excel_export.py  test_declaration_flow.py  test_elements.py  test_error_report.py  test_errors.py  test_flow_emails.py  test_galenic_formulation.py  test_newsletter.py  test_pdf_sanitation.py  test_population.py  test_roles.py  test_search.py  test_snapshot.py  test_solicitation.py  test_user.py  test_webinaires.py  test_webinar.py  utils.py
api/utils/: choice_field.py  emails.py  filters.py  responses.py  search.py  simplified_status.py  urls.py
api/views/: __init__.py  authentication.py  autocomplete.py  blog.py  company.py  condition.py  contact.py  declaration.py  effect.py  error_report.py  extract_label.py  galenic_formulation.py  grouped_views.py  ingredient.py  microorganism.py  newsletter.py  plant.py  population.py  preparation.py  report_issue.py  roles.py  search.py  snapshot.py  solicitation.py  stats.py  substance.py  unit.py  user.py  utils.py  webinaire.py  webinar.py
clevercloud/: allow_policy.json  deny_policy.json  post_build_hook.sh  run_succeeded_hook.sh
config/: celery.py  data_gouv_api.py  email.py  etl.py  grist_api.py  matomo_api.py  middleware.py  settings.py  tasks.py  urls.py  wsgi.py
config/tests/: test_article_recalculation.py  test_automatic_approval.py  test_cache_company.py  test_control_email_import.py  test_expiration.py  test_expiration_reminder.py  test_revoke_declarations.py  test_urls.py  test_withdraw_declarations.py
data/: README.md  choices.py  csv_importer.py  database_model.md  exceptions.py  fields.py  signals.py  storage.py  validators.py
data/admin/: __init__.py  abstract_admin.py  blogpost.py  company.py  condition.py  declaration.py  effect.py  error_report.py  galenic_formulation.py  global_roles.py  ingredient.py  microorganism.py  plant.py  population.py  preparation.py  roles.py  solicitation.py  status.py  substance.py  teleicare_etablissement_to_complalim_company_relation.py  user.py  webinaire.py  webinar.py
data/behaviours/: __init__.py  auto_validable.py  deactivable.py  expirable.py  historisable.py  time_stampable.py  verifiable.py
data/etl/: README.md  csv_importer.py  datagouv.py  declarations.py  extractor.py  importer_utils.py  post_load_transformation.py  transformer_loader.py  utils.py
data/factories/: __init__.py  blogpost.py  company.py  condition.py  declaration.py  effect.py  error_report.py  galenic_formulation.py  global_roles.py  ingredient.py  microorganism.py  plant.py  population.py  preparation.py  roles.py  snapshot.py  solicitation.py  status.py  substance.py  unit.py  user.py  webinaire.py  webinar.py
data/migrations/: 0001_initial.py  0002_ingredient_microorganism_plant_substance_and_more.py  0002_ingredient_microorganism_plant_substance_and_more_squashed_0023_alter_user_options_alter_user_is_active.py  0003_blogpost.py  0004_condition_population_and_more.py  0005_family_ingredient_microorganism_plant_plantpart_and_more.py  0006_rename_substance_ingredient_substances_and_more.py  0007_alter_plantfamily_options_and_more.py  0007_alter_substance_must_specify_quantity.py  0007_condition_is_obsolete_family_is_obsolete_and_more.py  0007_plantfamily_and_more.py  0007_webinar.py  0008_alter_historicalingredient_private_comments_and_more.py  0008_merge_20231225_1858.py  0008_remove_historicalpopulation_name_en_and_more.py  0009_merge_20231227_1050.py  0017_auto_20240213_1739.py  (+325 more)
docs/: conventions.md  fixtures.md
files/: POPULATION.csv  POPULATION_CIBLE.csv  REF_ICA_FORME_GALENIQUE.csv  REF_ICA_INGREDIENT_AUTRE.csv  REF_ICA_MICRO_ORGANISME.csv  REF_ICA_OBJECTIFS_EFFETS.csv  REF_ICA_PARTIE_PLANTE.csv  REF_ICA_PLANTE.csv  REF_ICA_POPULATION_ARISQUE.csv  REF_ICA_SUBSTANCE_ACTIVE.csv  REF_ICA_TYPE_PREPARATION.csv  unknown_name_file.csv
fixtures/: auth.Permission.yaml  data.BlogPost.yaml  data.Company.yaml  data.CompanySupervisor.yaml  data.Condition.yaml  data.Declarant.yaml  data.DeclarantRole.yaml  data.Effect.yaml  data.GalenicFormulation.yaml  data.Ingredient.yaml  data.Microorganism.yaml  data.Plant.yaml  data.PlantFamily.yaml  data.Population.yaml  data.Preparation.yaml  data.Substance.yaml  data.Supervisor.yaml  data.SupervisorRole.yaml  data.Unit.yaml  data.User.yaml  data.Webinar.yaml
frontend/: .eslintrc.js  README.md  package-lock.json  package.json  tailwind.config.js  vue.config.js
icare/: asgi.py  settings.py  urls.py  wsgi.py
notebooks/: README.md  activity_and_ingredient_type.ipynb  cleaning.ipynb  commentaire_completion.ipynb  data_exploration.ipynb  extract_duplicates_in_ANSES_files.ipynb  plant_parts_exploration.ipynb  siccrf_field_cleaning.ipynb  siccrf_fields_completion.ipynb
stats/: duplicated_computed_substances_bug.sql  entreprises_stats.sql  teleicare_users_extraction.sql
tokens/: admin.py
web/: auth-urls.py  forms.py  tests.py  urls.py  views.py
(+501 files in other folders)
