[tool]

[tool.poetry]
name = "complalim"
version = "0.0.1"
description = ""
authors = []
package-mode = false

[tool.poetry.dependencies]

######################################################################################################################
# Main
######################################################################################################################
python = "3.11.*"
Django = "5.*"       # https://github.com/django/django
django-environ = "*" # https://github.com/joke2k/django-environ

######################################################################################################################
# API
######################################################################################################################
djangorestframework = "*"            # https://github.com/encode/django-rest-framework
djangorestframework-camel-case = "*" # https://github.com/vbabiy/djangorestframework-camel-case
drf-base64 = "*"                     # https://bitbucket.org/levit_scs/drf_base64/src/master

######################################################################################################################
# Security & Monitoring
######################################################################################################################
sentry-sdk = "*" # https://github.com/getsentry/sentry-python

######################################################################################################################
# Database & Storage
######################################################################################################################
psycopg2 = "*"        # https://github.com/psycopg/psycopg2
boto3 = "*"           # https://github.com/boto/boto3
django-storages = "*" # https://github.com/jschneier/django-storages

######################################################################################################################
# Additional fields, tags, or Django features etc.
######################################################################################################################
django-filter = "*" # https://github.com/carltongibson/django-filter
django-simple-history = "*" # https://github.com/jazzband/django-simple-history
django-phonenumber-field = { extras = [
    "phonenumbers",
], version = "*" } # https://github.com/stefanfoulis/django-phonenumber-field

######################################################################################################################
# Linting & Formatting
######################################################################################################################
ruff = "*"       # https://github.com/charliermarsh/ruff
pre-commit = "*" # https://github.com/pre-commit/pre-commit

######################################################################################################################
# Testing & Debugging
######################################################################################################################
ipdb = "*"              # https://github.com/gotcha/ipdb
factory-boy = "*"       # https://github.com/FactoryBoy/factory_boy
requests-mock = "*"     # https://github.com/jamielennox/requests-mock
django-extensions = "*" # https://github.com/django-extensions/django-extensions
django-silk = "^5.3.1"

######################################################################################################################
# Front-end related
######################################################################################################################
django-webpack-loader = "*" # https://github.com/django-webpack/django-webpack-loader

######################################################################################################################
# Mailing
######################################################################################################################
django-anymail = "*" # https://github.com/anymail/django-anymail
sib-api-v3-sdk = "*" # https://github.com/sendinblue/APIv3-python-library

######################################################################################################################
# Misc
######################################################################################################################
pillow = "*"              # https://github.com/python-pillow/Pillow
django-ckeditor = "6.7.0" # https://github.com/django-ckeditor/django-ckeditor # we keep it temporarily for migrations
django-ckeditor-5 = "*"   # https://github.com/hvlads/django-ckeditor-5
django-viewflow = "*"     # https://github.com/viewflow/viewflow

unidecode = "^1.3.8"
celery = "^5.4.0"
redis = "^5.2.0"

xhtml2pdf = "^0.2.16"
bs4 = "^0.0.2"



######################################################################################################################
# Dépendances en environnement de dev
#########################
django-hijack = "^3.7.0"
pandas = "^2.2.3"
pyodbc = "^5.2.0"
mssql-django = "^1.5"
[tool.poetry.group.dev.dependencies]
sqlfluff = "*"

######################################################################################################################
# Data tools
######################################################################################################################
pandas = "*"       # https://github.com/pandas-dev/pandas
numpy = "*"        # https://github.com/numpy/numpy
seaborn = "*"      # https://github.com/mwaskom/seaborn
networkx = "*"     # https://github.com/networkx/networkx
ipykernel = "*"    # https://github.com/ipython/ipykernel
scikit-learn = "*" # https://github.com/scikit-learn/scikit-learn
matplotlib = "*"   # https://github.com/matplotlib/matplotlib

######################################################################################################################
# Config
######################################################################################################################

[tool.ruff]
line-length = 119
target-version = "py311"
extend-include = ["*.ipynb"]
extend-exclude = [
    "migrations",
    "__pycache__",
    "frontend",
    "docs",
    "fixtures",
    "clevercloud",
]

[tool.ruff.lint]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# pas d'auto sorting sur ces fichiers pour éviter les imports circulaires
"__init__.py" = ["I", "F401"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.isort]
section-order = [
    "future",
    "standard-library",
    "django",
    "third-party",
    "first-party",
    "local-folder",
]

[tool.ruff.lint.isort.sections]
"django" = ["django"]


[tool.ruff.format]
docstring-code-format = true


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
